# professional-cpp-6th-edition

./: .gitignore  README.md  notes.md
02-strings/exercises/02-5/: main.cpp
07-memory-management/examples/src/: enabled_shared_from_this.cpp  inout_ptr.cpp  shared_ptr.cpp  weak_ptr.cpp
07-memory-management/exercises/: CMakeLists.txt
07-memory-management/exercises/07-1/: main.cpp
07-memory-management/exercises/07-2/: main.cpp
08-classes/exercises/08-1/: main.cpp
08-classes/exercises/08-2/: main.cpp
08-classes/exercises/08-4/: main.cpp
09-mastering-classes/: CMakeLists.txt
09-mastering-classes/09-1/: Person.ixx
09-mastering-classes/09-2/: main.cpp
09-mastering-classes/09-3/: main.cpp
09-mastering-classes/09-4/: Person.cpp  main.cpp
09-mastering-classes/09-5/: main.cpp
10-inheritance/: CMakeLists.txt
10-inheritance/10-1/: Person.cpp
10-inheritance/10-2/: CMakeLists.txt
10-inheritance/10-3/: Person.ixx  main.cpp
10-inheritance/10-4/: hr.cpp  hr.ixx  main.cpp
11-headers/: CMakeLists.txt
11-headers/11-1/: CMakeLists.txt  main.cpp  simulator.ixx
11-headers/11-2/: BikeSimulator.cpp  CarSimulator.cpp  simulator.ixx
11-headers/11-3/: simulator_bike.ixx  simulator_car.ixx
11-headers/11-4/: main.cpp  simulator.ixx  simulator_bike.ixx  simulator_car.ixx  simulator_internals.cpp
11-headers/11-5/: CMakeLists.txt  main.cpp
32-design-techniques/: CMakeLists.txt
32-design-techniques/32-1/: main.cpp  raii.ixx
32-design-techniques/32-2/: main.cpp  raii.ixx
32-design-techniques/32-3/: main.cpp  raii.ixx
32-design-techniques/32-4/: main.cpp
ch02/exercises/02-1/: 02-1.vcxproj  main.cpp
ch02/exercises/02-2/: 02-2.sln  02-2.vcxproj  main.cpp
ch02/exercises/02-3/: main.cpp
ch02/exercises/02-4/: 02-4.vcxproj  main.cpp
ch02/exercises/02-5/: 02-5.sln  02-5.vcxproj
chapter02-strings/exercises/02-3/: 02-3.vcxproj
chapter02-strings/exercises/02-4/: 02-4.sln
chapter02-working-with-strings/exercises/02-1/: 02-1.sln
chapter02-working-with-strings/exercises/02-3/: 02-3.sln
chapter03-style/test/: CMakeLists.txt  CMakeSettings.json
chapter03/test/src/: hello.cpp
chapter07-memory-management/examples/: CMakeLists.txt
chapter07-memory-management/examples/src/: unique_ptr.cpp
chapter07-memory-management/exercises/07-3/: main.cpp
chapter07-memory-management/exercises/07-4/: main.cpp
chapter08-classes/exercises/: CMakeLists.txt
chapter08-classes/exercises/08-1/: Person.ixx
chapter08-classes/exercises/08-2/: Person.ixx
chapter08-classes/exercises/08-3/: Person.ixx  main.cpp
chapter08-classes/exercises/08-4/: Person.ixx
chapter08-classes/spreadsheet/: CMakeLists.txt
chapter08-classes/spreadsheet/src/: SpreadsheetCell.cpp  SpreadsheetCell.ixx  spreadsheet.cpp
chapter09-mastering-classes/: CMakeLists.txt
chapter09-mastering-classes/09-1/: main.cpp
chapter09-mastering-classes/09-2/: Person.ixx  main.cpp
chapter09-mastering-classes/09-3/: Person.ixx
chapter09-mastering-classes/09-4/: Person.ixx
chapter09-mastering-classes/09-5/: Person.ixx
chapter10-inheritance/: CMakeLists.txt
chapter10-inheritance/10-1/: CMakeLists.txt  Person.cpp  Person.ixx  main.cpp
chapter10-inheritance/10-2/: Person.cpp  main.cpp
chapter10-inheritance/10-3/: CMakeLists.txt  Person.cpp
chapter10-inheritance/10-4/: CMakeLists.txt  Person.cpp  Person.ixx  main.cpp
questions/: CMakeLists.txt
questions/virtual-base-init/: Zoo.ixx  main.cpp
questions/virtual-overloads/: main.cpp
spreadsheet/: CMakeLists.txt
spreadsheet/src/: Spreadsheet.cpp  Spreadsheet.ixx  SpreadsheetCell.cpp  SpreadsheetCell.ixx  SpreadsheetTest.cpp
templates/: CMakeLists.txt
templates/src/: GameBoard.ixx  GamePiece.ixx  Grid.ixx  main.cpp
